--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,15 @@
 index:
     path: /
     controller: App\Controller\PlatController::index
+fiche:
+    path: /fiche
+    controller: App\Controller\PlatController::fiche_plat
+categorie_plat:
+    path: /categorieplat
+    controller: App\Controller\PlatController::categorie_plat
+update_plat:
+    path: /updateplat
+    controller: App\Controller\PlatController::update_plat
+image_plat:
+    path: /imageplat
+    controller: App\Controller\PlatController::image_plat
