--- a/public/.htaccess
+++ b/public/.htaccess
@@ -11,5 +11,6 @@
     RewriteRule .? - [L]
 
     # Rewrite all other queries to the front controller.
-    RewriteRule .? %{ENV:BASE}/index.php [L]
+    RewriteRule ^(.*)$ index.php [QSA,L]
+    #RewriteRule ^platos index.php[QSA,L]
 </IfModule>
